<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time Keeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- Splash animation activity -->
    <string name="activity_splashanim_timeKeeper">Time Keeper</string>

    <!-- Registration Activity -->
    <string name="activity_registration_hi">HI!</string>
    <string name="activity_registration_by_cleanapps">by CleanApps</string>
    <string name="activity_registration_tagline_text">so that you don\'t loose your tracks</string>
    <string name="activity_registration_google_plus">Sign in with Google</string>
    <string name="activity_registration_edit_hint">enter details</string>
    <!-- Main Activity -->
    <string name="activity_add_details_login_button">Log In</string>
    <string name="activity_add_details_logout_button">Log Out</string>

    <!-- Timekeeper Activity -->
    <string name="timekeer_activity_menu_overflow">Expand</string>
    <string name="timekeer_activity_menu_settings">Settings</string>
    <string name="timekeer_activity_menu_help">Help</string>
    <string name="timekeer_activity_menu_about">About</string>
    <!-- Fragment Activity -->
    <string name="fragment_activity_button_login">Login</string>
    <string name="fragment_activity_button_logout">Logout</string>
    <string name="fragment_activity_time">00:00:00</string>
    <string name="fragment_activity_add_details">Details</string>
    <!-- Activity Add Details -->
    <string name="activity_add_details_client_hint">Client info</string>
    <string name="activity_add_details_work_done_hint">Work Details</string>
    <string name="activity_add_details_remarks_hint">Remarks</string>
    <string name="activity_add_details_save_button">Save</string>
    <string name="activity_add_details_title">Add Work Details</string>
    <!-- Fragment Monitor -->
    <string name="fragment_monitor_screen_login_time">Login Time</string>
    <string name="fragment_monitor_screen_logout_time">Logout Time</string>
    <string name="fragment_monitor_screen_hours_worked">Hours Worked</string>
     <string name="fragment_monitor_screen_forget_text">Oops! Did you forgot to select a day ?</string>
    <string name="fragment_monitor_screen_find_button">Find</string>
       <string name="fragment_monitor_screen_select_date">Select Date for Editing</string>
     
    <!-- About Timekeeper -->
    <string name="activity_about_timekeeper_about_text">00:00:00</string>

    <!-- Help Timekeepr -->
    <string name="activity_help_timekeeper_some_text">Help</string>

    <!-- Settings Timekeeper -->
    <string name="activity_settings_timekeeper_some_text">Settings</string>

</resources>